--- a/client/index.html
+++ b/client/index.html
@@ -1,20 +1,14 @@
 <html>
   <head> 
 	  <link rel="stylesheet" href="http://ol3js.org/en/master/css/ol.css" type="text/css">
+		<link rel="stylesheet" href="css/main.css" type="text/css">
 		<script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script type="text/javascript" src="js/sockets.js"></script>
-		<title>Real Time Postgis Edits</title>
-		<style>
-      .map {
-			  height:400px;
-				width: 100%;
-			}
-    </style>
+    <title>Real Time Postgis Edits</title>
   </head>
   <body>
 	  <div id="map" class="map"></div>
- 	  <script type="text/javascript" src="js/map.js">
-    </script> 
+ 	  <script type="text/javascript" src="js/map.js"></script> 
+    <script type="text/javascript" src="js/sockets.js"></script>
 	</body>
 </html>
